EDAN01/minizinc-1.6/tests/parsing/flatzinc/f-items-bad.fzn_yacc.err_exp
f-items-bad.fzn:5: syntax error before 'type'
f-items-bad.fzn:8: syntax error before 'enum'
f-items-bad.fzn:11: syntax error before 'variant_record'
f-items-bad.fzn:14: syntax error before 'assert'
f-items-bad.fzn:17: syntax error before 'output'
f-items-bad.fzn:20: syntax error before 'function'
f-items-bad.fzn:23: syntax error before 'x'
f-items-bad.fzn:26: syntax error before '='
f-items-bad.fzn:29: syntax error before 'include'
f-items-bad.fzn:35: syntax error before 'float'
f-items-bad.fzn:36: syntax error before 'bool'
f-items-bad.fzn:42: syntax error before '['
f-items-bad.fzn:43: syntax error before 'x'
f-items-bad.fzn:44: syntax error before 'y'
f-items-bad.fzn:45: syntax error before ';'
f-items-bad.fzn:46: syntax error before ')'
f-items-bad.fzn:48: syntax error before 'blah'
f-items-bad.fzn:50: syntax error before 'f'
f-items-bad.fzn:53: syntax error before 'output'
f-items-bad.fzn:54: syntax error before end of file
